--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -157,6 +157,8 @@ th
   background-color #53b2f8
   width 200px
   .head-menu
+    align-items center
+    color white
     background-color #28A0FF
     display flex
     justify-content space-between
