--- a/public/css/app.css
+++ b/public/css/app.css
@@ -189,6 +189,10 @@ th {
   width: 200px;
 }
 .container-menu .head-menu {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #fff;
   background-color: #28a0ff;
   display: -webkit-box;
   display: -ms-flexbox;
